<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ru.yandex.qatools.allure</groupId>
  <artifactId>sap-test</artifactId>
  <version>1.0-SNAPSHOT</version>
  <!--artifactId>sap-automating</artifactId-->
  <!--version>1.0</version-->
  <packaging>jar</packaging>

  <properties>
    <allure.version>1.5.0</allure.version>
    <aspectj.version>1.8.10</aspectj.version>
    <env.suite>testng.xml</env.suite>
  </properties>



  <dependencies>

    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>3.11</version>
    </dependency>

    <dependency>
      <groupId>org.hellojavaer</groupId>
      <artifactId>poi-excel-utils</artifactId>
      <version>2.0.0-beta</version>
    </dependency>
    <!-- allure-->
    <dependency>
      <groupId>ru.yandex.qatools.allure</groupId>
      <artifactId>allure-testng-adaptor</artifactId>
      <version>${allure.version}</version>
      <exclusions>
        <exclusion>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>1.7.18</version>
    </dependency>


    <!-- core
    <dependency>
      <groupId>sap.ui.automating</groupId>
      <artifactId>sapoui-core</artifactId>
      <version>1.0</version>
    </dependency>-->

    <!-- aspectj -->
    <dependency>
      <groupId>org.aspectj</groupId>
      <artifactId>aspectjweaver</artifactId>
      <version>${aspectj.version}</version>
    </dependency>

    <!--<dependency>-->
      <!--<groupId>org.apache.httpcomponents</groupId>-->
      <!--<artifactId>httpcore</artifactId>-->
      <!--<version>4.4.4</version>-->
    <!--</dependency>-->
    <!--<dependency>-->
      <!--<groupId>org.apache.httpcomponents</groupId>-->
      <!--<artifactId>httpclient</artifactId>-->
      <!--<version>4.5.2</version>-->
    <!--</dependency>-->

    <!--<dependency>-->
      <!--<groupId>org.seleniumhq.selenium</groupId>-->
      <!--<artifactId>selenium-api</artifactId>-->
      <!--<version>2.53.0</version>-->
    <!--</dependency>-->

    <!--<dependency>-->
      <!--<groupId>org.seleniumhq.selenium</groupId>-->
      <!--<artifactId>selenium-leg-rc</artifactId>-->
      <!--<version>2.53.0</version>-->
    <!--</dependency>-->

    <!-- selenium driver -->
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-chrome-driver</artifactId>
      <version>2.53.0</version>
    </dependency>
    <!--<dependency>-->
      <!--<groupId>org.seleniumhq.selenium</groupId>-->
      <!--<artifactId>selenium-firefox-driver</artifactId>-->
      <!--<version>2.53.1</version>-->
    <!--</dependency>-->
    <!--<dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-remote-driver</artifactId>
      <version>2.53.0</version>
    </dependency>-->
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>6.9.10</version>
    </dependency>
    <dependency>
      <groupId>ru.stqa.selenium</groupId>
      <artifactId>webdriver-factory</artifactId>
      <version>2.0</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>3.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-server</artifactId>
      <version>3.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>htmlunit-driver</artifactId>
      <version>2.20</version>
    </dependency>
    <dependency>
      <groupId>com.codeborne</groupId>
      <artifactId>phantomjsdriver</artifactId>
      <version>1.3.0</version>
    </dependency>
  </dependencies>
  <build>

    <testResources>
      <testResource>
        <directory>src/test/core.resources/testng.xml</directory>
        <filtering>true</filtering>
      </testResource>
    </testResources>
    <plugins>


      <!--plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-core.resources-plugin</artifactId>
        <version>2.7</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin-->

      <!--plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-core.resources-plugin</artifactId>
        <version>2.7</version>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.shared</groupId>
            <artifactId>maven-filtering</artifactId>
            <version>3.1.1</version>
          </dependency>
        </dependencies>
      </plugin-->
       <!--surfire plugin-->
      <!--<plugin>-->
        <!--<artifactId>maven-surefire-plugin</artifactId>-->
        <!--<version>2.19.1</version>-->
        <!--<configuration>-->
          <!--<suiteXmlFiles>-->
            <!--<suiteXmlFile>src/test/core.resources/testng.xml</suiteXmlFile>-->
          <!--</suiteXmlFiles>-->
          <!--<systemPropertyVariables>-->
            <!--<application.properties>/application.properties</application.properties>-->
          <!--</systemPropertyVariables>-->
        <!--</configuration>-->
      <!--</plugin>-->

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.6.1</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <fork>true</fork>
          <executable>C:\Program Files\Java\jdk1.8.0_144\bin\javac.exe</executable>
          <encoding>UTF-8</encoding>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.shared</groupId>
            <artifactId>maven-filtering</artifactId>
            <version>1.3</version>
          </dependency>
        </dependencies>
      </plugin>

      <!-- !!!-->
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.19.1</version>
        <configuration>
          <argLine>-Xms256m -Xmx512m -ea -Dfile.encoding=UTF-8 -XX:MaxPermSize=128m</argLine>
          <argLine>-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"</argLine>
          <suiteXmlFiles>
            <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
          </suiteXmlFiles>
          <!--properties>
            <property>
              <name>listener</name>
              <value>ru.yandex.qatools.allure.junit.AllureRunListener</value>
            </property>
          </properties-->
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
          </dependency>
        </dependencies>
      </plugin>

    </plugins>
  </build>
  <!-- profiles -->
  <profiles>
    <!-- browsers -->
    <profile>
      <id>firefox</id>
      <properties>
        <capabilities>/firefox.capabilities</capabilities>
      </properties>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
    </profile>
    <profile>
      <id>chrome</id>
      <properties>
        <capabilities>/chrome.capabilities</capabilities>
      </properties>
    </profile>
    <!--profile>
      <id>ie</id>
      <properties>
        <capabilities>/ie.capabilities</capabilities>
      </properties>
    </profile-->
    <!--profile>
      <id>safari</id>
      <properties>
        <capabilities>/safari.capabilities</capabilities>
      </properties>
    </profile-->
    <!--profile>
      <id>phantomjs</id>
      <properties>
        <capabilities>/phantomjs.capabilities</capabilities>
      </properties>
    </profile-->
    <!--profile>
      <id>opera</id>
      <properties>
        <capabilities>/opera.capabilities</capabilities>
      </properties>
    </profile-->
    <!--profile>
      <id>htmlunit</id>
      <properties>
        <capabilities>/htmlunit.capabilities</capabilities>
      </properties>
    </profile-->
    <!-- environments -->
    <profile>
      <id>localhost</id>
      <properties>
        <site.url>http://localhost/</site.url>
      </properties>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
    </profile>
    <profile>
      <id>devhost</id>
      <properties>
        <site.url>http://devhost/</site.url>
      </properties>
    </profile>
    <profile>
      <id>testhost</id>
      <properties>
        <site.url>http://testhost/</site.url>
      </properties>
    </profile>
    <profile>
      <id>prodhost</id>
      <properties>
        <site.url>http://prodhost.com/</site.url>
      </properties>
    </profile>
    <!-- grid -->
    <profile>
      <id>nogrid</id>
      <properties>
        <grid.url></grid.url>
      </properties>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
    </profile>
    <profile>
      <id>grid</id>
      <properties>
        <grid.url>http://localhost:4444/wd/hub/</grid.url>
      </properties>
    </profile>
  </profiles>

  <reporting>
    <excludeDefaults>true</excludeDefaults>
    <plugins>
      <plugin>
        <groupId>ru.yandex.qatools.allure</groupId>
        <artifactId>allure-maven-plugin</artifactId>
        <version>2.5</version>
        <!--
        <configuration>
          <resultsDirectory>${project.build.directory}/allure-results</resultsDirectory>
          <reportDirectory>${project.build.directory}</reportDirectory>
        </configuration>
        -->
      </plugin>
    </plugins>
  </reporting>

</project>
